--- a/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/i18n/en/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "uSpeedo Docs",
+    "message": "uSpeedo",
     "description": "The title in the navbar"
   },
   "item.label.SMS": {
