--- a/i18n/zh-Hans/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh-Hans/docusaurus-plugin-content-docs/current.json
@@ -3,13 +3,13 @@
     "message": "Next",
     "description": "The label for version current"
   },
-  "sidebar.sms.category.Getting Started": {
-    "message": "Getting Started",
-    "description": "The label for category Getting Started in sidebar sms"
+  "sidebar.sms.category.Get Started": {
+    "message": "Get Started",
+    "description": "The label for category Get Started in sidebar sms"
   },
-  "sidebar.sdk.category.Getting Started": {
-    "message": "Getting Started",
-    "description": "The label for category Getting Started in sidebar sdk"
+  "sidebar.sdk.category.Get Started": {
+    "message": "Get Started",
+    "description": "The label for category Get Started in sidebar sdk"
   },
   "sidebar.api.category.API LIST": {
     "message": "API LIST",
