--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -24,7 +24,7 @@
     "description": "The label of footer link with label=GitHub linking to https://github.com/facebook/docusaurus"
   },
   "copyright": {
-    "message": "Copyright © 2023 My Project, Inc. Built with Docusaurus.",
+    "message": "Copyright © 2023 uSpeedo All Rights Reserved",
     "description": "The footer copyright"
   }
 }
